--- a/package.json
+++ b/package.json
@@ -21,5 +21,6 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "homepage": "https://leannezhang.github.io/react-tutorial-fetch-book"
 }
